changing back bc not straightforward how to add image to navbar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "images/logo.jpg"
+  title: "The Green Yard"
   navbar:
     left:
       - href: index.qmd
