--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
 
 website:
   title: false
+  search: true
   navbar:
     left:
       - logo: "images/logo.jpg"
@@ -17,7 +18,6 @@ website:
       - href: contact.qmd
         text: Contact Us
     right: 
-      - search: true
   favicon: "images/favicon.png"
   page-footer:
     right: "Check out our [YouTube Channel](https://www.youtube.com/@thegreenyardaz)"
