--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,9 +2,10 @@ project:
   type: website
 
 website:
-  title: false
+  site: "The Green Yard"
   navbar:
     search: true
+    title: false
     logo: "images/logo.jpg"
     left:
       - href: index.qmd
