I am not quite understanding where to specify title: false to hide site name in navbar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,10 +2,9 @@ project:
   type: website
 
 website:
-  site: "The Green Yard"
+  title: "The Green Yard"
   navbar:
     search: true
-    title: false
     logo: "images/logo.jpg"
     left:
       - href: index.qmd
