--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
 
 website:
   title: "The Green Yard"
+  sidebar: false  # Disable the sidebar
   navbar:
     logo: "images/logo.jpg"
     title: false
